grammar.js
    source_file: ($) => seq(optional($.shebang), optional(root($))),

    content: ($) => markupContent($),

    _section_content: ($) =>
      markupContent($, {requireLeadingSeparator: true}),

    _markup_inline: ($) =>
      prec.right(choice(
        seq($._markup_space, $._markup_nonspace_inline),
        $._markup_space,
        $._markup_nonspace_inline,
      )),

    list_body: ($) =>
      seq(
        $._list_body_segment,
        repeat(seq(
          $._list_continuation_gap,
          repeat(choice($.line_comment, $.block_comment)),
          optional($._list_body_segment),
        )),
      ),

    _list_continuation_gap: ($) =>
      // The scanner only validates indentation and leaves the actual newline or
      // parbreak to markup rules. That keeps blank-line paragraph boundaries
      // visible inside list items instead of hiding them in a continuation token.
      seq(
        $._list_continuation,
        $._markup_separator,
        optional($._markup_indent),
      ),

    _list_body_segment: ($) =>
      choice(
        $._list_inline_body,
        $._heading_line,
        $.bullet_list_item,
        $.numbered_list_item,
        $.term_list_item,
      ),

    text: ($) =>
      // `_word` stays hidden so prose is one text run rather than one public
      // child per word. The internal split remains useful because spaces can be
      // either ordinary text gaps or the start of another inline construct.
      prec.right(seq(
        $._word,
        repeat(seq($._markup_word_gap, $._word)),
      )),

    // The high-precedence alternative keeps word-internal underscores and
    // stars out of emphasis parsing without scanner-maintained previous-token
    // state. Typst excludes CJK and Korean scripts from this word-boundary
    // protection.
    _word: (_) =>
      choice(
        token(prec(3, MARKUP_WORD_WITH_INTERNAL_MARKER)),
        token(prec(-1, /[^ \t\r\n\v\f\u0085\u2028\u2029\\`$#<@*_\'"\[\]~:]+/)),
        token(prec(-3, /[<@*_\[~`$:]/)),
      ),

    // General markup brackets may contain arbitrary markup and paragraph
    // breaks. More restrictive bracket rules below preserve the newline policy
    // of headings and emphasis constructs.
    bracketed_text: ($) =>
      bracketed($, $._markup_inline, {paragraphs: true}),

    heading: ($) =>
      prec.right(seq(
        field("marker", $.heading_marker),
        optional(choice(
          seq(
            field("separator", $._markup_space),
            optional(seq(
              field("body", $.heading_body),
            )),
          ),
          seq(
            $.block_comment,
            optional(seq(
              optional(field("separator", $._markup_space)),
              field("body", $.heading_body),
            )),
          ),
          field("body", $.heading_body),
        )),
      )),

    section: ($) =>
      choice(
        prec.dynamic(3, prec.right(2, seq(
          optional($._markup_indent),
          field("heading", $.heading),
          sectionLabelTail($),
          optional(field("body", alias($._section_content, $.content))),
        ))),
        prec.dynamic(2, prec.right(2, seq(
          optional($._markup_indent),
          field("heading", $.heading),
          optional(sectionTrailingTail($)),
          optional(field("body", alias($._section_content, $.content))),
        ))),
      ),

    heading_body: ($) =>
      seq(
        $._heading_nonspace,
        repeat(choice(
          $._heading_nonspace,
          seq($._markup_space, $._heading_nonspace),
        )),
      ),

    _heading_nonspace: ($) =>
      markupInlineSet($, {
        label: false,
        bracket: alias($._heading_bracketed_text, $.bracketed_text),
      }),

    numbered_list_item: ($) =>
      simpleListItem($, $.numbered_list_marker),

    raw: ($) =>
      seq(
        alias($._raw_open, $.raw_delimiter),
        optional(field("language", $.raw_language)),
        optional(field("content", $.raw_content)),
        alias($._raw_close, $.raw_delimiter),
      ),

    reference: ($) =>
      seq(
        "@",
        field("target", alias(token.immediate(REF_ID), $.identifier)),
        optional(field(
          "supplement",
          seq(
            $._immediate_content_ahead,
            alias(contentBlock($, {immediate: true}), $.content_block),
          ),
        )),
      ),

    smart_quote: (_) => choice("'", '"'),

    escape: (_) =>
      token(choice(
        UNICODE_SCALAR_ESCAPE,
        /\\[^\s]/,
      )),

    malformed_escape: (_) =>
      token(prec(-1, new RustRegex("\\\\u\\{[^\\s}]*\\}?"))),

    embedded_code: ($) =>
      prec.dynamic(1, seq(
        alias($._hash, "#"),
        embeddedRootBody($, CODE_CONTEXT.embeddedRoot),
      )),

    content_block: ($) => contentBlock($),

    equation: ($) =>
      seq(
        "$",
        optional(field("body", $.math)),
        optional(mathSpaceRun($)),
        "$",
      ),

    // Code mode

    _code_block_body: ($) =>
      choice(
        // Blank code blocks may contain newlines, but they should not expose an
        // empty wrapper or separator as a public body child.
        repeat1($._code_newline),
        prec.right(seq(
          repeat($._code_newline),
          field("body", $._code_item),
          repeat(seq($._code_separator, field("body", $._code_item))),
          optional($._code_separator),
        )),
      ),

    incomplete_return_expression: ($) =>
      embeddedRecovery(choice(
        embeddedTerminated(
          $,
          "return",
          field("operator", choice("+", "-", "−", "not")),
        ),
        embeddedTerminated(
          $,
          $._embedded_return_dangling_operator,
        ),
      )),

    // Top-level/code-block expressions are newline-strict. The only contextual
    // continuations are a following dot and `else`. Delimited constructs use
    // `_continued_expression`, which mirrors Typst's AtNewline::Continue mode.
    _continued_expression: ($) => $._continued_assignment,

    identifier: (_) => token(IDENT),
    numeric: ($) =>
      prec(1, seq(
        field("value", choice($.integer, $.float)),
        field("unit", $.unit),
      )),

    string: ($) =>
      seq(
        '"',
        repeat(choice(
          $.string_content,
          $.string_escape,
          $.malformed_escape,
        )),
        '"',
      ),

    string_content: (_) => token.immediate(prec(2, /[^"\\]+/)),
    string_escape: (_) =>
      token.immediate(choice(
        UNICODE_SCALAR_ESCAPE,
        /\\\r\n/,
        /\\[\n\r\v\f\u0085\u2028\u2029]/,
        /\\./,
      )),

    code_block: ($) =>
      seq(
        "{",
        optional(prec.dynamic(1, $._code_block_body)),
        closingCodeGap($),
        "}",
      ),

    arguments: ($) =>
      prec.right(choice(
        prec.dynamic(1, seq(
          $._code_argument_ahead,
          $._parenthesized_arguments,
          repeat1($._content_argument),
        )),
        seq($._code_argument_ahead, $._parenthesized_arguments),
        repeat1($._content_argument),
      )),

    _content_argument: ($) =>
      seq(
        $._code_argument_ahead,
        alias($._immediate_content_block, $.content_block),
      ),

    _parenthesized_arguments: ($) =>
      seq(
        token.immediate("("),
        choice(
          closingCodeGap($),
          seq(codeGap($), $._argument_body),
        ),
        ")",
      ),

    named_argument: ($) =>
      prec.dynamic(1, prec(1, seq(
        field("name", $.identifier),
        codeGap($),
        ":",
        codeGap($),
        field("value", $._continued_expression),
      ))),

    parameters: ($) => parametersRule($),

    destructuring_pattern: ($) =>
      parenthesizedList($, $._destructuring_item),

    _destructuring_item: ($) =>
      choice(
        $._binding_pattern,
        $.named_destructuring_item,
        $.destructuring_sink,
      ),

    math: ($) =>
      prec.right(choice(
        mathSpaceRun($),
        seq(
          optional(mathSpaceRun($)),
          $._math_items,
        ),
      )),

    // Adjacent atoms need no separator. Spaced atoms are preceded by a
    // zero-width lookahead token, so spaces before a closing delimiter remain
    // available to the enclosing construct instead of committing to another
    // expression.
    _math_items: ($) =>
      seq(
        $._math_expression,
        repeat(choice(
          $._math_expression,
          seq(
            mathSpaceRun($, $._math_expression_space),
            $._math_expression,
          ),
        )),
      ),

    // Argument values exclude leading/trailing spaces; those are owned by the
    // argument list. Internal spaces use the same deterministic item sequence.
    math_text: (_) =>
      choice(
        token(prec(
          -1,
          new RustRegex(
            `[^${rustRanges(XID_START_RANGES)}${rustRanges(NUMBER_RANGES)}\\s$#_\\^/!'()\\[\\]{}|,;.&]`,
          ),
        )),
        // `!` is a factorial only when it is directly adjacent to its operand.
        // With intervening trivia Typst treats it as ordinary math text.
        token(prec(-3, /[.,;()\[\]{}|!]/)),
      ),

    math_primes: (_) => token(/'+/),

    math_application: ($) =>
      prec(
        PREC.mathCall,
        choice(
          seq(
            field(
              "function",
              choice(
                $.math_identifier,
                $.math_field_access,
              ),
            ),
            field(
              "argument",
              alias($._immediate_math_nonparen_delimited, $.math_delimited),
            ),
          ),
          seq(
            field(
              "function",
              choice(
                alias($._math_letter, $.math_letter),
                $.math_primes,
                $.string,
                $.escape,
              ),
            ),
            field(
              "argument",
              alias($._immediate_math_delimited, $.math_delimited),
            ),
          ),
        ),
      ),

    // A bare `|` is math text and `||` is a shorthand. Typst's paired vertical
    // delimiter is `[| ... |]`; it does not pair `|...|` or `||...||`.
    math_delimited: ($) =>
      seq(
        field("open", alias($._math_open_delimiter, $.math_delimiter)),
        optional(field("body", $.math)),
        mathClose($),
      ),

    _immediate_math_delimited: ($) =>
      seq(
        field(
          "open",
          alias($._math_immediate_open, $.math_delimiter),
        ),
        optional(field("body", $.math)),
        mathClose($),
      ),

    _immediate_math_nonparen_delimited: ($) =>
      seq(
        field(
          "open",
          alias(
            $._math_immediate_nonparen_open,
            $.math_delimiter,
          ),
        ),
        optional(field("body", $.math)),
        mathClose($),
      ),

    _math_open_delimiter: (_) => token(choice("[|", MATH_OPEN)),
